--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "scripts": {
     "build": "tsc",
     "start": "tsx index.ts",
-    "demo": "tsx demo.ts"
+    "demo": "tsx demo.ts",
+    "qa": "tsx src/qa-agent.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
@@ -14,7 +19,9 @@
     "dotenv": "^16.4.7"
   },
   "devDependencies": {
+    "@vitest/ui": "^4.0.7",
     "tsx": "^4.20.6",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^4.0.7"
   }
 }
