--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.157",
     "@vitest/ui": "^4.0.7",
     "tsx": "^4.20.6",
     "typescript": "^5.0.0",
